# tedit

./: Cargo.toml
define_commands_macro/: Cargo.toml
define_commands_macro/src/: lib.rs
src/: editor.rs  main.rs
src/editor/: backend.rs  buffer.rs  command.rs  command_palette.rs  config.rs  cursor.rs  document.rs  geometry.rs  gutter.rs  keymap.rs  pane.rs  prompt.rs  renderer.rs  status_bar.rs  ui.rs  viewport.rs
src/editor/buffer/: manager.rs  modification.rs  row.rs
src/editor/document/: buffer.rs  cursor.rs  manager.rs  viewport.rs
src/editor/document/buffer/: row.rs
src/editor/geometry/: point.rs  rect.rs
src/editor/pane/: cursor.rs  gutter.rs  manager.rs  viewport.rs
src/editor/prompt/: confirm.rs  files.rs  search.rs
src/editor/renderer/: compositor.rs  frame.rs  layout.rs  rect.rs  style.rs  viewport.rs
src/editor/renderer/frame/: diff.rs
src/editor/ui/: component.rs  frame.rs  style.rs  text.rs  theme.rs  viewport.rs  widget.rs
src/editor/ui/component/: gutter.rs  pane.rs  pane_manager.rs  status_bar.rs
src/editor/ui/component/status_bar/: widget.rs
src/editor/ui/geometry/: anchor.rs  rect.rs
src/editor/ui/theme/: highlight_group.rs  registry.rs
src/editor/ui/widget/: container.rs  separator.rs  span.rs
themes/: kanagawa.toml
